--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VTU 21 Scheme Hub</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -21,9 +21,9 @@
                 <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../Notes/notes.html">Notes</a>
+                <a class="nav-link" href="./notes.html">Notes</a>
              <li class="nav-item">
-                <a class="nav-link" href="#">Question Paper</a>
+                <a class="nav-link" href="./qp.html">Question Paper</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Lab Manuals</a>
@@ -32,7 +32,7 @@
                 <a class="nav-link" href="#">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Result</a>
+                <a class="nav-link" href="https://results.vtu.ac.in/">Result</a>
               </li>
             </ul>
           </div>
@@ -45,7 +45,7 @@
         </div>
         <div class="overflow-hidden">
             <div class="container px-5">
-              <img src="./cse2.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="700" loading="lazy">
+              <img src="./assests/cse2.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="700" loading="lazy">
             </div>
         </div>
         <footer class="py-3 my-4">
