--- a/qp.html
+++ b/qp.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="notes.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -22,12 +22,12 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../home/index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./notes.html">Notes</a>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Question Paper</a>
+                        <a class="nav-link" href="./qp.html">Question Paper</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Lab Manuals</a>
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="#">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Result</a>
+                        <a class="nav-link" href="https://results.vtu.ac.in/">Result</a>
                     </li>
                 </ul>
             </div>
@@ -44,54 +44,51 @@
     </nav>
     <div class="container my-5">
         <div class="d-flex flex-wrap justify-content-around">
-            <a ] href="./syllabus.html" target="_blank" class="card m-2 animated-card" style="width: 18rem;">
-                <img src="../home/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
-                <div class="card-body">
-                  <h5 class="card-title">6th Sem Syllabus</h5>
-                  <p class="card-text">Find all the notes for the 21 scheme.</p>
-                </div>
-              </a>
-            <div class="card m-2 animated-card" style="width: 18rem;">
+            
+
+            <a href="../Notes/SEPM.html" target="_blank" class="card m-2 animated-card" style="width: 18rem;">
                 <img src="../home/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title">21CS61 > Software Engineering and Project Management</h5>
-                    <p class="card-text">Find all the notes for the 21 scheme.</p>
+                    <p class="card-text">Find all the notes for the 21 scheme CSE.</p>
+
                 </div>
-            </div>
+            </a>
             <div class="card m-2 animated-card" style="width: 18rem;">
                 <img src="../home/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title">21CS62 > Full Stack Development</h5>
-                    <p class="card-text">Find all the notes for the 21 scheme.</p>
+                    <p class="card-text">Find all the notes for the 21 scheme CSE.</p>
                 </div>
             </div>
             <div class="card m-2 animated-card" style="width: 18rem;">
                 <img src="../home/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title">21CS63 > Computer Graphics and Image Processing</h5>
-                    <p class="card-text">Find all the notes for the 21 scheme.</p>
+                    <p class="card-text">Find all the notes for the 21 scheme CSE.</p>
                 </div>
             </div>
             <div class="card m-2 animated-card" style="width: 18rem;">
                 <img src="../home/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title">21CS643 > Advanced Computer Architecture</h5>
-                    <p class="card-text">Find all the notes for the 21 scheme.</p>
+                    <p class="card-text">Find all the notes for the 21 scheme CSE.</p>
                 </div>
             </div>
             <div class="card m-2 animated-card" style="width: 18rem;">
                 <img src="../home/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title">21CSL66 > Computer Graphics and Image Processing Laboratory</h5>
-                    <p class="card-text">Find all the notes for the 21 scheme.</p>
+                    <p class="card-text">Find all the notes for the 21 scheme CSE.</p>
                 </div>
             </div>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
