--- a/syllabus.html
+++ b/syllabus.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="syl.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -27,7 +27,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./notes.html">Notes</a>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Question Paper</a>
+                        <a class="nav-link" href="./qp.html">Question Paper</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Lab Manuals</a>
@@ -36,17 +36,16 @@
                         <a class="nav-link" href="#">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Result</a>
+                        <a class="nav-link" href="https://results.vtu.ac.in/">Result</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
     <div class="container my-4">
         <div class="d-flex flex-column align-items-center">
-            <h2>6th Sem Syllabus</h2>
-            <div class="embed-responsive embed-responsive-16by9" style="width: 100%; max-width: 800px;">
+            <h2>6th Sem Syllabus CSE 21</h2>
+            <div class="embed-responsive embed-responsive-16by9" style="width: 100vw; max-width: 800px; height: 70vh;">
                 <iframe class="embed-responsive-item" src="assests/syl.pdf" width="100%" height="600px"></iframe>
             </div>
             <a href="assests/syl.pdf" class="btn btn-primary mt-3" download>Download Syllabus PDF</a>
