--- a/qp.html
+++ b/qp.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="./qp.html">Question Paper</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Lab Manuals</a>
+                        <a class="nav-link" href="./labassests/">Lab Manuals</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Projects</a>
@@ -47,39 +47,39 @@
             
 
             <a href="../Notes/SEPM.html" target="_blank" class="card m-2 animated-card" style="width: 18rem;">
-                <img src="../home/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
+                <img src="../assests/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title">21CS61 > Software Engineering and Project Management</h5>
-                    <p class="card-text">Find all the notes for the 21 scheme CSE.</p>
+                    <p class="card-text">Question Paper Related to this Subject Click here</p>
 
                 </div>
             </a>
             <div class="card m-2 animated-card" style="width: 18rem;">
-                <img src="../home/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
+                <img src="../assests/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title">21CS62 > Full Stack Development</h5>
-                    <p class="card-text">Find all the notes for the 21 scheme CSE.</p>
+                    <p class="card-text">Question Paper Related to this Subject Click here</p>
                 </div>
             </div>
             <div class="card m-2 animated-card" style="width: 18rem;">
-                <img src="../home/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
+                <img src="../assests/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title">21CS63 > Computer Graphics and Image Processing</h5>
-                    <p class="card-text">Find all the notes for the 21 scheme CSE.</p>
+                    <p class="card-text">Question Paper Related to this Subject Click here</p>
                 </div>
             </div>
             <div class="card m-2 animated-card" style="width: 18rem;">
-                <img src="../home/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
+                <img src="../assests/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title">21CS643 > Advanced Computer Architecture</h5>
-                    <p class="card-text">Find all the notes for the 21 scheme CSE.</p>
+                    <p class="card-text">Question Paper Related to this Subject Click here</p>
                 </div>
             </div>
             <div class="card m-2 animated-card" style="width: 18rem;">
-                <img src="../home/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
+                <img src="../assests/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title">21CSL66 > Computer Graphics and Image Processing Laboratory</h5>
-                    <p class="card-text">Find all the notes for the 21 scheme CSE.</p>
+                    <p class="card-text">Question Paper Related to this Subject Click here</p>
                 </div>
             </div>
         </div>
