--- a/SEPM.html
+++ b/SEPM.html
@@ -69,7 +69,7 @@
                         <a class="nav-link" href="./qp.html">Question Paper</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Lab Manuals</a>
+                        <a class="nav-link" href="./lab.html">Lab Manuals</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Projects</a>
