--- a/notes.html
+++ b/notes.html
@@ -60,13 +60,13 @@
 
                 </div>
             </a>
-            <div class="card m-2 animated-card" style="width: 18rem;">
+            <a href="./fsd.html" target="_blank" class="card m-2 animated-card" style="width: 18rem;">
                 <img src="./assests/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title">21CS62 > Full Stack Development</h5>
                     <p class="card-text">Find all the notes for the 21 scheme CSE.</p>
                 </div>
-            </div>
+            </a>
             <div class="card m-2 animated-card" style="width: 18rem;">
                 <img src="./assests/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
