--- a/SEPM.html
+++ b/SEPM.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SEPM Notes</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="notes.css">
+    <link rel="stylesheet" href="notes.css"> 
+    <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
@@ -25,7 +26,7 @@
             border: 1px solid #ccc;
             border-radius: 10px;
             padding: 20px;
-            width: 80vw;
+            width: 70vw;
             text-align: center;
             transition: transform 0.3s ease;
             background: #fff;
@@ -67,7 +68,7 @@
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <div class="collapse navbar-collapse nav2" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
@@ -120,7 +121,7 @@
             </div>
             <div class="module" id="module3">
                 <h4>Module 3</h4>
-                <p><b>AGILE DEVELOPMENT:</b> What is Agility?, Agility and the cost of change. What is an agile Process?, 
+                <p><b>Agile Development:</b> What is Agility?, Agility and the cost of change. What is an agile Process?, 
                     Extreme Programming (XP), Other Agile Process Models, A tool set for Agile process </p>
                    <p><b> Principles that guide practice:</b> Software Engineering Knowledge, Core principles, Principles that 
                     guide each framework activity</p>
