--- a/index.html
+++ b/index.html
@@ -1,65 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VTU 21 Scheme Hub</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="index.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>VTU 21 Scheme Hub</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="index.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-primary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">VTU CSE 21 </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./notes.html">Notes</a>
-             <li class="nav-item">
-                <a class="nav-link" href="./qp.html">Question Paper</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./lab.html">Lab Manuals</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://results.vtu.ac.in/">Result</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <div class="px-4 pt-5 my-5 text-center border-bottom">
-        <h1 class="display-4 fw-bold typing-text">Computer Science & Engineering</h1>
-        <div class="col-lg-6 mx-auto">
-          <p class="lead mb-4">Welcome to our website, where we are on a mission to provide Best Resources like Notes, Important Questions, Projects for Mainly 21 Scheme CSE</p>
-        </div>
-        <div class="overflow-hidden">
-            <div class="container px-5">
-              <img src="./assests/cse2.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="700" loading="lazy">
-            </div>
-        </div>
-        <footer class="py-3 my-4">
-            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-              <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-              <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-              <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-              <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-              <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
-            </ul>
-            <p class="text-center text-body-secondary">© 2024 VTU CSE 21</p>
-        </footer>
+  <nav class="navbar navbar-expand-lg bg-body-primary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">VTU CSE 21 </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse nav2" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./notes.html">Notes</a>
+          <li class="nav-item">
+            <a class="nav-link" href="./qp.html">Question Paper</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./lab.html">Lab Manuals</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://results.vtu.ac.in/">Result</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <script src="index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </nav>
+  <div class="px-4 pt-5 my-5 text-center border-bottom " style="background-color: #ECE2D0;">
+    <h1 class="display-4 fw-bold typing-text">Computer Science & Engineering</h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="lead mb-4 welcome ">Welcome to our website, where we are on a mission to provide Best Resources like
+        Notes, Important Questions, Projects for Mainly 21 Scheme CSE</p>
+    </div>
+    <div class="overflow-hidden">
+      <div class="container px-5">
+        <img src="./assests/img1.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700"
+          height="700" loading="lazy">
+      </div>
+    </div>
+    <footer class="py-3 my-4 ">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="#" class="nav-link px-2 footer">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 footer">Features</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 footer">Pricing</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 footer">FAQs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 footer">About</a></li>
+      </ul>
+      <p class="text-center footer ">© 2024 VTU CSE 21</p>
+    </footer>
+  </div>
+  <script src="index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
