--- a/notes.html
+++ b/notes.html
@@ -7,6 +7,7 @@
     <title>Notes</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="notes.css">
+    <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -19,7 +20,7 @@
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <div class="collapse navbar-collapse nav2" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
@@ -45,47 +46,47 @@
     <div class="container my-5">
         <div class="d-flex flex-wrap justify-content-around">
             <a href="./syllabus.html" target="_blank" class="card m-2 animated-card" style="width: 18rem;">
-                <img src="./assests/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
+                <img src="./assests/img2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title">6th Sem Syllabus</h5>
-                    <p class="card-text">Find all the notes for the 21 scheme CSE.</p>
+                    <!-- <p class="card-text">Find all the notes for the 21 scheme CSE.</p> -->
                 </div>
             </a>
 
             <a href="./SEPM.html" target="_blank" class="card m-2 animated-card" style="width: 18rem;">
-                <img src="./assests/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
+                <img src="./assests/img2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
-                    <h5 class="card-title">21CS61 > Software Engineering and Project Management</h5>
-                    <p class="card-text">Find all the notes for the 21 scheme CSE.</p>
+                    <h5 class="card-title"><p>21CS61 </p> <p>Software Engineering and Project Management</p></h5>
+                    <!-- <p class="card-text">Find all the notes for the 21 scheme CSE.</p> -->
 
                 </div>
             </a>
             <a href="./fsd.html" target="_blank" class="card m-2 animated-card" style="width: 18rem;">
-                <img src="./assests/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
+                <img src="./assests/img2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
-                    <h5 class="card-title">21CS62 > Full Stack Development</h5>
-                    <p class="card-text">Find all the notes for the 21 scheme CSE.</p>
+                    <h5 class="card-title"><p>21CS62 </p> <p>Full Stack Development</p></h5>
+                    <!-- <p class="card-text">Find all the notes for the 21 scheme CSE.</p> -->
                 </div>
             </a>
             <div class="card m-2 animated-card" style="width: 18rem;">
-                <img src="./assests/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
+                <img src="./assests/img2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
-                    <h5 class="card-title">21CS63 > Computer Graphics and Image Processing</h5>
-                    <p class="card-text">Find all the notes for the 21 scheme CSE.</p>
+                    <h5 class="card-title"><p>21CS63 </p> <p>Computer Graphics and Image Processing</p></h5>
+                    <!-- <p class="card-text">Find all the notes for the 21 scheme CSE.</p> -->
                 </div>
             </div>
             <div class="card m-2 animated-card" style="width: 18rem;">
-                <img src="./assests/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
+                <img src="./assests/img2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
-                    <h5 class="card-title">21CS643 > Advanced Computer Architecture</h5>
-                    <p class="card-text">Find all the notes for the 21 scheme CSE.</p>
+                    <h5 class="card-title"><p>21CS643 </p><p> Advanced Computer </p></h5>
+                    <!-- <p class="card-text">Find all the notes for the 21 scheme CSE.</p> -->
                 </div>
             </div>
             <div class="card m-2 animated-card" style="width: 18rem;">
-                <img src="./assests/cse2.jpg" class="card-img-top" alt="Example image" loading="lazy">
+                <img src="./assests/img2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
-                    <h5 class="card-title">21CSL66 > Computer Graphics and Image Processing Laboratory</h5>
-                    <p class="card-text">Find all the notes for the 21 scheme CSE.</p>
+                    <h5 class="card-title"><p>21CSL66</p>  <p>Computer Graphics and Image Processing Laboratory</p></h5>
+                    <!-- <p class="card-text">Find all the notes for the 21 scheme CSE.</p> -->
                 </div>
             </div>
         </div>
