--- a/qp.html
+++ b/qp.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes</title>
+    <link rel="icon" href="./assests/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="notes.css">
     <link rel="stylesheet" href="index.css">
@@ -31,7 +32,7 @@
                         <a class="nav-link" href="./qp.html">Question Paper</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./labassests/">Lab Manuals</a>
+                        <a class="nav-link" href="./lab.html">Lab Manuals</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Projects</a>
