ON BOARD ..COMMING SOON

--- a/lab.html
+++ b/lab.html
@@ -15,29 +15,55 @@
             justify-content: center;
             gap: 20px;
             margin-top: 20px;
-            background: linear-gradient(135deg, #ffcc33 0%, #ff66cc 100%);
+            /* background: linear-gradient(135deg, #ffcc33 0%, #ff66cc 100%); */
         }
         .manual {
-            border: 1px solid #ccc;
+            /* border: 1px solid #2A3D45; */
             border-radius: 10px;
-            margin: 10px;
             padding: 20px;
             width: 70vw;
             text-align: center;
             transition: transform 0.3s ease;
-            background: #ffffff; /* Default background color */
+            background: #fff;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            overflow: hidden;
+            background-color:#f7f7f7;
+            color: #2A3D45 !important;
+            font-weight: 600;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            /* Add this line */
         }
+
         .manual:hover {
             transform: scale(1.05);
+            box-shadow: 0 8px 16px #2A3D45;
+            /* Modify this line */
         }
-        .download-btn, .view-btn {
+
+        .view-btn:hover{
+            background-color: rgba(0, 0, 255, 0.731);
+        }
+
+
+        .download-btn,
+        .view-btn {
             display: block;
-            
             margin: 10px auto;
+            background-color: #ECE2D0;
+            color: #2A3D45;
+            border: none;
+            font-weight: 500;
         }
+
+        .download-btn {
+            width: 15vw;
+        }
+
         .pdf-viewer {
-            width: 100%;
-            height: 400px;
+            width: 65vw;
+            height: 500px;
             border: none;
             margin-top: 10px;
             display: none;
@@ -65,7 +91,7 @@
                 <a class="nav-link" href="./lab.html">Lab Manuals</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Projects</a>
+                <a class="nav-link" href="./project.html">Projects</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="https://results.vtu.ac.in/">Result</a>
@@ -79,14 +105,14 @@
         <div class="manual-container">
             <div class="manual" id="manual1">
                 <h4>Computer Graphics And Image Processing </h4>
-                <p>This Programs are using Python</p>
+                <p> Programs using Python</p>
                 <a class="btn btn-primary download-btn" href="./assests/cg.pdf" download>Download PDF</a>
                 <button class="btn btn-secondary view-btn" onclick="toggleViewer('manual1-viewer')">View PDF</button>
                 <iframe id="manual1-viewer" class="pdf-viewer" src="./assests/cg.pdf"></iframe>
             </div>
             <div class="manual" id="manual2">
                 <h4>Fullstack Development</h4>
-                <p>Description of Manual 2 content goes here.</p>
+                
                 <a class="btn btn-primary download-btn" href="path/to/manual2.pdf" download>Download PDF</a>
                 <button class="btn btn-secondary view-btn" onclick="toggleViewer('manual2-viewer')">View PDF</button>
                 <iframe id="manual2-viewer" class="pdf-viewer" src="path/to/manual2.pdf"></iframe>
