--- a/SEPM.html
+++ b/SEPM.html
@@ -7,7 +7,7 @@
     <title>SEPM Notes</title>
     <link rel="icon" href="./assests/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="notes.css"> 
+    <link rel="stylesheet" href="notes.css">
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -18,13 +18,14 @@
             justify-content: center;
             gap: 20px;
             margin-top: 20px;
-            background: linear-gradient(135deg, #ffcc33 0%, #ff66cc 100%);
+            /* background: linear-gradient(135deg, #2A3D45 0%, #ECE2D0 100%); */
             padding: 20px;
             border-radius: 15px;
+
         }
 
         .module {
-            border: 1px solid #ccc;
+            /* border: 1px solid #2A3D45; */
             border-radius: 10px;
             padding: 20px;
             width: 70vw;
@@ -35,24 +36,40 @@
             flex-direction: column;
             justify-content: space-between;
             overflow: hidden;
+            background-color: #f7f7f7;
+            color: black !important;
+            font-weight: 400;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            /* Add this line */
         }
 
         .module:hover {
             transform: scale(1.05);
+             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            /* Modify this line */
         }
+
+        .view-btn:hover{
+            background-color: rgba(0, 0, 255, 0.731);
+        }
+
 
         .download-btn,
         .view-btn {
             display: block;
             margin: 10px auto;
+            background-color: #ECE2D0;
+            color: #2A3D45;
+            border: none;
+            font-weight: 500;
         }
 
         .download-btn {
-            width: 90%;
+            width: 15vw;
         }
 
         .pdf-viewer {
-            width: 90%;
+            width: 65vw;
             height: 500px;
             border: none;
             margin-top: 10px;
@@ -83,7 +100,7 @@
                         <a class="nav-link" href="./lab.html">Lab Manuals</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Projects</a>
+                        <a class="nav-link" href="./project.html">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://results.vtu.ac.in/">Result</a>
@@ -92,16 +109,17 @@
             </div>
         </div>
     </nav>
-    <p style="text-align: center; font-size: 30px;  color: rgb(227, 66, 93); font-weight: 600;"> Software Engineering And Project Management - 21CS61</p>
+    <p style="text-align: center; font-size: 30px;  color:#2A3D45; font-weight: 600;"> Software Engineering And Project
+        Management - 21CS61</p>
     <div class="container">
         <div class="module-container">
             <div class="module" id="module1">
                 <h4>Module 1</h4>
-                <p><b>Software and Software Engineering:</b> The nature of Software, The unique nature of WebApps, 
-                    Software Engineering, The software Process, The software Engineering practice, The software 
+                <p><b>Software and Software Engineering:</b> The nature of Software, The unique nature of WebApps,
+                    Software Engineering, The software Process, The software Engineering practice, The software
                     myths, How it all starts.</p>
-                    <p><b>Process Models:</b> A generic process model, Process assessment and improvement, Prescriptive 
-                    process models, Waterfall model, Incremental process models, Evolutionary process models, Concurrent 
+                <p><b>Process Models:</b> A generic process model, Process assessment and improvement, Prescriptive
+                    process models, Waterfall model, Incremental process models, Evolutionary process models, Concurrent
                     models, Specialized process models</p>
                 <a class="btn btn-primary download-btn" href="./assests/module1.pdf" download>Download PDF</a>
                 <button class="btn btn-secondary view-btn" onclick="toggleViewer('module1-viewer')">View PDF</button>
@@ -109,12 +127,12 @@
             </div>
             <div class="module" id="module2">
                 <h4>Module 2</h4>
-                <p><b>Understanding Requirements:</b> Requirements Engineering, Establishing the ground work, 
-                    Eliciting Requirements, Developing use cases, Building the requirements model, Negotiating 
+                <p><b>Understanding Requirements:</b> Requirements Engineering, Establishing the ground work,
+                    Eliciting Requirements, Developing use cases, Building the requirements model, Negotiating
                     Requirements, Validating Requirements</p>
-                    
-                   <p> <b>Requirements Modeling Scenarios, Information and Analysis classes:</b> Requirement Analysis, 
-                    Scenario based modeling, UML models that supplement the Use Case, Data modeling Concepts class 
+
+                <p> <b>Requirements Modeling Scenarios, Information and Analysis classes:</b> Requirement Analysis,
+                    Scenario based modeling, UML models that supplement the Use Case, Data modeling Concepts class
                     Based Modeling</p>
                 <a class="btn btn-primary download-btn" href="./assests/module2.pdf" download>Download PDF</a>
                 <button class="btn btn-secondary view-btn" onclick="toggleViewer('module2-viewer')">View PDF</button>
@@ -122,9 +140,11 @@
             </div>
             <div class="module" id="module3">
                 <h4>Module 3</h4>
-                <p><b>Agile Development:</b> What is Agility?, Agility and the cost of change. What is an agile Process?, 
+                <p><b>Agile Development:</b> What is Agility?, Agility and the cost of change. What is an agile
+                    Process?,
                     Extreme Programming (XP), Other Agile Process Models, A tool set for Agile process </p>
-                   <p><b> Principles that guide practice:</b> Software Engineering Knowledge, Core principles, Principles that 
+                <p><b> Principles that guide practice:</b> Software Engineering Knowledge, Core principles, Principles
+                    that
                     guide each framework activity</p>
                 <a class="btn btn-primary download-btn" href="./assests/module3.pdf" download>Download PDF</a>
                 <button class="btn btn-secondary view-btn" onclick="toggleViewer('module3-viewer')">View PDF</button>
@@ -132,11 +152,11 @@
             </div>
             <div class="module" id="module4">
                 <h4>Module 4</h4>
-                <p><b>Introduction to Project Management:</b> 
-                    Introduction, Project and Importance of Project Management, Contract Management, Activities Covered 
-                    by Software Project Management, Plans, Methods and Methodologies, Some ways of categorizing 
-                    Software Projects, Stakeholders, Setting Objectives, Business Case, Project Success and Failure, 
-                    Management and Management Control, Project Management life cycle, Traditional versus Modern 
+                <p><b>Introduction to Project Management:</b>
+                    Introduction, Project and Importance of Project Management, Contract Management, Activities Covered
+                    by Software Project Management, Plans, Methods and Methodologies, Some ways of categorizing
+                    Software Projects, Stakeholders, Setting Objectives, Business Case, Project Success and Failure,
+                    Management and Management Control, Project Management life cycle, Traditional versus Modern
                     Project Management Practices. </p>
                 <a class="btn btn-primary download-btn" href="./assests/module4.pdf" download>Download PDF</a>
                 <button class="btn btn-secondary view-btn" onclick="toggleViewer('module4-viewer')">View PDF</button>
@@ -145,9 +165,11 @@
             <div class="module" id="module5">
                 <h4>Module 5</h4>
                 <p><b>Software Quality: </b>
-                    Introduction, The place of software quality in project planning, Importance of software quality, Defining 
-                    software quality, quality models, ISO 9126, product and process metrics, product versus process quality 
-                    management, Quality Management systems, process capability models, techniques to enhance software 
+                    Introduction, The place of software quality in project planning, Importance of software quality,
+                    Defining
+                    software quality, quality models, ISO 9126, product and process metrics, product versus process
+                    quality
+                    management, Quality Management systems, process capability models, techniques to enhance software
                     quality, testing, Software reliability, quality plans. </p>
                 <a class="btn btn-primary download-btn" href="./assests/module5.pdf" download>Download PDF</a>
                 <button class="btn btn-secondary view-btn" onclick="toggleViewer('module5-viewer')">View PDF</button>
@@ -157,7 +179,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script>
         function toggleViewer(viewerId) {
             const viewer = document.getElementById(viewerId);
