--- a/lab.html
+++ b/lab.html
@@ -49,7 +49,7 @@
 
         .download-btn,
         .view-btn {
-            display: block;
+            /* display: block; */
             margin: 10px auto;
             background-color: #ECE2D0;
             color: #2A3D45;
@@ -57,9 +57,9 @@
             font-weight: 500;
         }
 
-        .download-btn {
+        /* .download-btn {
             width: 15vw;
-        }
+        } */
 
         .pdf-viewer {
             width: 65vw;
