--- a/SEPM.html
+++ b/SEPM.html
@@ -56,7 +56,7 @@
 
         .download-btn,
         .view-btn {
-            display: block;
+            /* display: block; */
             margin: 10px auto;
             background-color: #ECE2D0;
             color: #2A3D45;
@@ -64,9 +64,9 @@
             font-weight: 500;
         }
 
-        .download-btn {
-            width: 20vw;
-        }
+        /* .download-btn {
+            width: vw;
+        } */
 
         .pdf-viewer {
             width: 65vw;
@@ -121,6 +121,7 @@
                 <p><b>Process Models:</b> A generic process model, Process assessment and improvement, Prescriptive
                     process models, Waterfall model, Incremental process models, Evolutionary process models, Concurrent
                     models, Specialized process models</p>
+                    
                 <a class="btn btn-primary download-btn" href="./assests/module1.pdf" download>Download PDF</a>
                 <button class="btn btn-secondary view-btn" onclick="toggleViewer('module1-viewer')">View PDF</button>
                 <iframe id="module1-viewer" class="pdf-viewer" src="./assests/module1.pdf"></iframe>
