--- a/fsd.html
+++ b/fsd.html
@@ -47,7 +47,7 @@
 
         .download-btn,
         .view-btn {
-            display: block;
+            /* display: block; */
             margin: 10px auto;
         }
 
