--- a/notes.html
+++ b/notes.html
@@ -46,7 +46,7 @@
     </nav>
     <div class="container my-5">
         <div class="d-flex flex-wrap justify-content-around">
-            <a href="./syllabus.html" target="_blank" class="card m-2 animated-card" style="width: 18rem;">
+            <a href="./syllabus.html"  class="card m-2 animated-card" style="width: 18rem;">
                 <img src="./assests/img2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title">6th Sem Syllabus</h5>
@@ -54,7 +54,7 @@
                 </div>
             </a>
 
-            <a href="./SEPM.html" target="_blank" class="card m-2 animated-card" style="width: 18rem;">
+            <a href="./SEPM.html"  class="card m-2 animated-card" style="width: 18rem;">
                 <img src="./assests/img2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title"><p>21CS61 </p> <p>Software Engineering and Project Management</p></h5>
@@ -62,34 +62,34 @@
 
                 </div>
             </a>
-            <a href="./fsd.html" target="_blank" class="card m-2 animated-card" style="width: 18rem;">
+            <a href="./fsd.html"  class="card m-2 animated-card" style="width: 18rem;">
                 <img src="./assests/img2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title"><p>21CS62 </p> <p>Full Stack Development</p></h5>
                     <!-- <p class="card-text">Find all the notes for the 21 scheme CSE.</p> -->
                 </div>
             </a>
-            <div class="card m-2 animated-card" style="width: 18rem;">
+            <a href="./fsd.html"  class="card m-2 animated-card" style="width: 18rem;">
                 <img src="./assests/img2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title"><p>21CS63 </p> <p>Computer Graphics and Image Processing</p></h5>
                     <!-- <p class="card-text">Find all the notes for the 21 scheme CSE.</p> -->
                 </div>
-            </div>
-            <div class="card m-2 animated-card" style="width: 18rem;">
+            </a>
+            <a href="./Notes/ACA.html"  class="card m-2 animated-card" style="width: 18rem;">
                 <img src="./assests/img2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
-                    <h5 class="card-title"><p>21CS643 </p><p> Advanced Computer </p></h5>
+                    <h5 class="card-title"><p>21CS643 </p><p> Advanced Computer Architecture</p></h5>
                     <!-- <p class="card-text">Find all the notes for the 21 scheme CSE.</p> -->
                 </div>
-            </div>
-            <div class="card m-2 animated-card" style="width: 18rem;">
+            </a>
+            <a href="./Notes/CG.html"  class="card m-2 animated-card" style="width: 18rem;"> 
                 <img src="./assests/img2.jpg" class="card-img-top" alt="Example image" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title"><p>21CSL66</p>  <p>Computer Graphics and Image Processing Laboratory</p></h5>
                     <!-- <p class="card-text">Find all the notes for the 21 scheme CSE.</p> -->
                 </div>
-            </div>
+            </a>
         </div>
     </div>
 
