--- a/lab.html
+++ b/lab.html
@@ -96,7 +96,7 @@
             <a class="nav-link" href="./lab.html">Lab Manuals</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./project.html">Projects</a>
+            <a class="nav-link" href="./Projects/bothprojects.html">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://results.vtu.ac.in/">Result</a>
