--- a/Notes/CG.html
+++ b/Notes/CG.html
@@ -88,7 +88,7 @@
             <div class="collapse navbar-collapse nav2" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../notes.html">Notes</a>
@@ -99,7 +99,7 @@
                         <a class="nav-link" href="../lab.html">Lab Manuals</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../project.html">Projects</a>
+                        <a class="nav-link" href="../Projects/bothprojects.html">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://results.vtu.ac.in/">Result</a>
