--- a/Notes/SEPM.html
+++ b/Notes/SEPM.html
@@ -7,8 +7,8 @@
     <title>SEPM Notes</title>
     <link rel="icon" href="./assests/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="notes.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../CSS/notes.css">
+    <link rel="stylesheet" href="../index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
@@ -89,7 +89,7 @@
             <div class="collapse navbar-collapse nav2" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../notes.html">Notes</a>
@@ -100,7 +100,7 @@
                         <a class="nav-link" href="../lab.html">Lab Manuals</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../project.html">Projects</a>
+                        <a class="nav-link" href="../Projects/bothprojects.html">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://results.vtu.ac.in/">Result</a>
