--- a/Projects/Mainmini.html
+++ b/Projects/Mainmini.html
@@ -7,7 +7,7 @@
     <title>VTU 21 Scheme Hub</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="../index.css">
-    <link rel="icon" href="./assests/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
@@ -23,7 +23,8 @@
             border: 1px solid #ccc;
             border-radius: 10px;
             padding: 20px;
-            width: 70vw;
+            width: 65vw;
+         
             background: #fff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
@@ -116,28 +117,43 @@
     </nav>
 
     <div class="container">
-        <h2 class="text-center my-5">Main Mini-Projects</h2>
+        <h2 class="text-center ">Main Mini-Projects</h2>
 
         <div class="project-container">
             <!-- Section 1 -->
             <div class="project-card">
-                <h5>Project 1: Air-Canvas using OpenCV, Python</h5>
+                <h5>ChatGPT Clone Using OpenAI API </h5>
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/OAr6AIvH9VY?si=8caZjQYCWU7Lminb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 <a class="view-btn" href="https://github.com/GirishCPatil/CG-MiniProjects/blob/main/Air-Canvas/main.py">GitHub</a>
             </div>
 
             <!-- Section 2 -->
             <div class="project-card">
-                <h5>Project 2: Mouse Movement Using Eyes using OpenCV, Python</h5>
+                <h5>To-Do List App Using React JS </h5>
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/SBuZSalHLe0?si=AJog3ThWSCcZHq8u" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 <a class="view-btn" href="https://github.com/GirishCPatil/CG-MiniProjects/blob/main/eye/eyes.py">GitHub</a>
             </div>
 
             <!-- Add more sections as needed -->
+            <div class="project-card">
+                <h5>Project 3: Mouse Movement Using Eyes using OpenCV, Python</h5>
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <a class="view-btn" href="https://github.com/GirishCPatil/CG-MiniProjects/blob/main/eye/eyes.py">GitHub</a>
+            </div>
+
+            <div class="project-card">
+                <h5>Project 4: Another Project using OpenCV, Python</h5>
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <a class="view-btn" href="https://github.com/GirishCPatil/CG-MiniProjects/blob/main/eye/eyes.py">GitHub</a>
+            </div>
         </div>
     </div>
 
