--- a/Projects/Mainmini.html
+++ b/Projects/Mainmini.html
@@ -127,6 +127,7 @@
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/OAr6AIvH9VY?si=8caZjQYCWU7Lminb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 <a class="view-btn" href="https://github.com/GirishCPatil/CG-MiniProjects/blob/main/Air-Canvas/main.py">GitHub</a>
+                <a class="view-btn" href="https://youtu.be/OAr6AIvH9VY?si=B2nM3d0pWI1G7ULp">YouTube</a>
             </div>
 
             <!-- Section 2 -->
