--- a/Projects/Mainmini.html
+++ b/Projects/Mainmini.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VTU 21 Scheme Hub</title>
+    <title>Main mini project</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="../index.css">
     <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
@@ -24,7 +24,7 @@
             border-radius: 10px;
             padding: 20px;
             width: 65vw;
-         
+
             background: #fff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
@@ -124,9 +124,12 @@
             <div class="project-card">
                 <h5>ChatGPT Clone Using OpenAI API </h5>
                 <div class="video-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/OAr6AIvH9VY?si=8caZjQYCWU7Lminb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/OAr6AIvH9VY?si=8caZjQYCWU7Lminb"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
-                <a class="view-btn" href="https://github.com/GirishCPatil/CG-MiniProjects/blob/main/Air-Canvas/main.py">GitHub</a>
+                <a class="view-btn" href="https://github.com/CodeWithHarry/chatgpt-clone-youtube">GitHub</a>
                 <a class="view-btn" href="https://youtu.be/OAr6AIvH9VY?si=B2nM3d0pWI1G7ULp">YouTube</a>
             </div>
 
@@ -134,32 +137,200 @@
             <div class="project-card">
                 <h5>To-Do List App Using React JS </h5>
                 <div class="video-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/SBuZSalHLe0?si=AJog3ThWSCcZHq8u" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/SBuZSalHLe0?si=AJog3ThWSCcZHq8u"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
-                <a class="view-btn" href="https://github.com/GirishCPatil/CG-MiniProjects/blob/main/eye/eyes.py">GitHub</a>
+                <a class="view-btn"
+                    href="https://github.com/CodeWithHarry/Sigma-Web-Dev-Course/tree/main/Video%20114">GitHub</a>
+                <a class="view-btn" href="https://youtu.be/SBuZSalHLe0?si=i_ZSJ_aY-4uqWKtR">YouTube</a>
+
             </div>
 
             <!-- Add more sections as needed -->
             <div class="project-card">
-                <h5>Project 3: Mouse Movement Using Eyes using OpenCV, Python</h5>
+                <h5>Bank Management System Using Java Application Development</h5>
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/pMR_48AF-A0?si=uy8UW-1wo-J37059"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
-                <a class="view-btn" href="https://github.com/GirishCPatil/CG-MiniProjects/blob/main/eye/eyes.py">GitHub</a>
+                <a class="view-btn" href="https://github.com/kunaltyagi9/ATM-Simulator-System">GitHub</a>
+                <a class="view-btn" href="https://youtu.be/pMR_48AF-A0?si=n5OlSpI2WGW4zt-j">YouTube</a>
             </div>
 
+            <!-- Add more sections as needed -->
+
             <div class="project-card">
-                <h5>Project 4: Another Project using OpenCV, Python</h5>
+                <h5>Chatting Application Using Java Swing And Socket Programming</h5>
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/st7qtH8ysCo?si=dFkPDhbRNVdKdsn3"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
-                <a class="view-btn" href="https://github.com/GirishCPatil/CG-MiniProjects/blob/main/eye/eyes.py">GitHub</a>
+                <a class="view-btn" href="https://github.com/kunaltyagi9/chatting-application">GitHub</a>
+                <a class="view-btn" href="https://youtu.be/st7qtH8ysCo?si=kLa_sqp84uhfxiq_">YouTube</a>
             </div>
+
+            <!-- Add more sections as needed -->
+            <div class="project-card">
+                <h5>Password Manager Using Reactjs </h5>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/sgNZcK8QIyc?si=VWON1ESObdlw_7hv"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <a class="view-btn"
+                    href="https://github.com/CodeWithHarry/Sigma-Web-Dev-Course/tree/main/Video%20130">GitHub</a>
+                <a class="view-btn" href="https://youtu.be/sgNZcK8QIyc?si=neZ5EZWlxyexPBir">YouTube</a>
+            </div>
+
+            <!-- Add more sections as needed -->
+
+            <div class="project-card">
+                <h5>Invoice Processing System Using Reactjs</h5>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/WfiQVGy3cQI?si=611hMBQOo8ZF--qB"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <a class="view-btn"
+                    href="https://github.com/kunaltyagi9/Spring-Boot-Projects/tree/master/invoice-app">GitHub</a>
+                <a class="view-btn" href="https://youtu.be/WfiQVGy3cQI?si=m0QGQcqIkj4LNWDv">YouTube</a>
+            </div>
+
+            <!-- Add more sections as needed -->
+
+            <div class="project-card">
+                <h5>Group Chat Application Using Java</h5>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/TTHtrXufilk?si=TngNl8AmYdF3iVey"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <a class="view-btn"
+                    href="https://github.com/kunaltyagi9/chatting-application/tree/master/Group%20Chatting%20Application">GitHub</a>
+                <a class="view-btn" href="https://youtu.be/TTHtrXufilk?si=bKZZ1UKOLI40-lg0">YouTube</a>
+            </div>
+
+
+            <!-- Add more sections as needed -->
+
+            <div class="project-card">
+                <h5>University Management System Using Java</h5>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/9UYUjJI1dRU?si=m0EN83anvduWhBMo"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <a class="view-btn" href="https://github.com/kunaltyagi9/University-Management-System">GitHub</a>
+                <a class="view-btn" href="https://youtu.be/9UYUjJI1dRU?si=bzzDmJvHwq9NQk12">YouTube</a>
+            </div>
+
+            <!-- Add more sections as needed -->
+
+            <div class="project-card">
+                <h5>Employee Management System using Java</h5>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/IeQ7t1P6_0A?si=HDrannJAcJX5GHpo"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <a class="view-btn" href="https://github.com/kunaltyagi9/Employee-Management-System">GitHub</a>
+                <a class="view-btn" href="https://youtu.be/IeQ7t1P6_0A?si=Rr0OWKusSKuL0LSl">YouTube</a>
+            </div>
+
+             <!-- Add more sections as needed -->
+
+             <div class="project-card">
+                <h5>Twitter Clone Using Tailwind </h5>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/iegMqFnVocA?si=TOo_zgOLBV8O2V2T" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <a class="view-btn" href="https://github.com/CodeWithHarry/Sigma-Web-Dev-Course/tree/main/Video%20101">GitHub</a>
+                <a class="view-btn" href="https://youtu.be/iegMqFnVocA?si=pYta1fc7w6Pc3lAO">YouTube</a>
+            </div>
+
+
+            <!-- Add more sections as needed -->
+            <div class="project-card">
+                <h5>Netflix Clone Using Reactjs And Firebase</h5>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/YQQD67N5pi0?si=BFnbxe3BFQj17ZFH"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <a class="view-btn" href="https://topmate.io/greatstack/968148">Source Code</a>
+                <a class="view-btn" href="https://youtu.be/YQQD67N5pi0?si=gYF-u7ARr6wWKIpY">YouTube</a>
+            </div>
+
+            <!-- Add more sections as needed -->
+
+
+            <div class="project-card">
+                <h5>Zomato Cloned as Tomato </h5>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/DBMPXJJfQEA?si=AXWpbgBh_URWOmL6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <a class="view-btn" href="https://topmate.io/greatstack/872325">Source Code</a>
+                <a class="view-btn" href="https://youtu.be/DBMPXJJfQEA?si=n7_SgeM3PRYj7ZTa">YouTube</a>
+            </div>
+
+             <!-- Add more sections as needed -->
+
+
+             <div class="project-card">
+                <h5>Ecommerce Website Using Reactjs </h5>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/jbfuzcrfjqQ?si=kHMc_UA9-7dbJ22y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <a class="view-btn" href="https://topmate.io/greatstack/714157">Source Code</a>
+                <a class="view-btn" href="https://youtu.be/jbfuzcrfjqQ?si=Cpwin-lF2P2u5ZgJ">YouTube</a>
+            </div>
+
+              <!-- Add more sections as needed -->
+
+
+              <div class="project-card">
+                <h5>Amazon clone </h5>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/NC0IRIJhFpI?si=KKg1gw1OuD7WgIRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <a class="view-btn" href="https://topmate.io/greatstack/788210">Source Code</a>
+                <a class="view-btn" href="https://youtu.be/NC0IRIJhFpI?si=9V5Bb0wHnFF2HaFE">YouTube</a>
+            </div>
+
+            <!-- Add more sections as needed -->
+
+
+            <div class="project-card">
+                <h5>YouTube Clone </h5>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Zb1zVeXLUf8?si=VtGJzt57ADur38ft" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <a class="view-btn" href="https://topmate.io/greatstack/810471">Source Code</a>
+                <a class="view-btn" href="https://youtu.be/Zb1zVeXLUf8?si=Tc-tYq0AdRxo4jvk">YouTube</a>
+            </div>
+
+
+
+
+
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
