--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     </div>
     <footer class="py-3 my-4 ">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 footer">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 footer">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 footer">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 footer">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 footer">About</a></li>
+        <li class="nav-item"><a href="./index.html" class="nav-link px-2 footer">Home</a></li>
+        <!-- <li class="nav-item"><a href="#" class="nav-link px-2 footer">Features</a></li> -->
+        <li class="nav-item"><a href="https://chat.whatsapp.com/GE41XVeiIpvAKSPMi1BMiq " class="nav-link px-2 footer">Whatsapp</a></li>
+        <!-- <li class="nav-item"><a href="#" class="nav-link px-2 footer">FAQs</a></li> -->
+        <li class="nav-item"><a href="./about.html" class="nav-link px-2 footer">About</a></li>
       </ul>
       <p class="text-center footer ">© 2024 VTU CSE 21</p>
     </footer>
