--- a/Notes/ACA.html
+++ b/Notes/ACA.html
@@ -136,12 +136,13 @@
                     Memory Technology. For all Algorithms or mechanisms any one example is sufficient. </p>
 
                 <div>
-                    <a class="btn btn-primary download-btn" href="./assests/module2.pdf" download>Download PDF</a>
+                    <a class="btn btn-primary download-btn" href="../assests/ACA module2.pdf" download>Download PDF</a>
                     <button class="btn btn-secondary view-btn" onclick="toggleViewer('module2-viewer')">View
                         PDF</button>
                 </div>
-                <iframe id="module2-viewer" class="pdf-viewer" src="./assests/module2.pdf"></iframe>
+                <iframe id="module2-viewer" class="pdf-viewer" src="../assests/ACA module2.pdf"></iframe>
             </div>
+
             <div class="module" id="module3">
                 <h4>Module 3</h4>
                 <p><b>Hardware Technologies 2: </b> Bus Systems, Cache Memory Organizations, Shared Memory
@@ -150,11 +151,11 @@
                     is sufficient.
                 </p>
                 <div>
-                    <a class="btn btn-primary download-btn" href="./assests/module3.pdf" download>Download PDF</a>
+                    <a class="btn btn-primary download-btn" href="../assests/ACA module3.pdf" download>Download PDF</a>
                     <button class="btn btn-secondary view-btn" onclick="toggleViewer('module3-viewer')">View
                         PDF</button>
                 </div>
-                <iframe id="module3-viewer" class="pdf-viewer" src="./assests/module3.pdf"></iframe>
+                <iframe id="module3-viewer" class="pdf-viewer" src="../assests/ACA module3.pdf"></iframe>
             </div>
             <div class="module" id="module4">
                 <h4>Module 4</h4>
