--- a/Notes/CG.html
+++ b/Notes/CG.html
@@ -143,7 +143,7 @@
                     3D transformations, OpenGL geometric transformations functions </p>
 
                 <div>
-                    <a class="btn btn-primary download-btn" href="./assests/module2.pdf" download>Download PDF</a>
+                    <a class="btn btn-primary download-btn" href="#" download>Download PDF</a>
                     <button class="btn btn-secondary view-btn" onclick="toggleViewer('module2-viewer')">View
                         PDF</button>
                 </div>
