--- a/Notes/SEPM.html
+++ b/Notes/SEPM.html
@@ -135,9 +135,9 @@
                 <p> <b>Requirements Modeling Scenarios, Information and Analysis classes:</b> Requirement Analysis,
                     Scenario based modeling, UML models that supplement the Use Case, Data modeling Concepts class
                     Based Modeling</p>
-               <div> <a class="btn btn-primary download-btn" href="./assests/module2.pdf" download>Download PDF</a>
+               <div> <a class="btn btn-primary download-btn" href="../assests/sepm module2.pdf" download>Download PDF</a>
                 <button class="btn btn-secondary view-btn" onclick="toggleViewer('module2-viewer')">View PDF</button></div>
-                <iframe id="module2-viewer" class="pdf-viewer" src="./assests/module2.pdf"></iframe>
+                <iframe id="module2-viewer" class="pdf-viewer" src="../assests/sepm module2.pdf"></iframe>
             </div>
             <div class="module" id="module3">
                 <h4>Module 3</h4>
