--- a/Notes/fsd.html
+++ b/Notes/fsd.html
@@ -129,10 +129,10 @@
                     <p>Configuring Databases, Defining and Implementing Models, Basic Data Access, Adding Model String
                     Representations, Inserting/Updating data, Selecting and deleting objects, Schema Evolution </p>
                 <div class="buttons">
-                    <a class="btn btn-primary download-btn" href="./assests/module2.pdf" download>Download PDF</a>
+                    <a class="btn btn-primary download-btn" href="../assests/FSD module2.pdf" download>Download PDF</a>
                     <button class="btn btn-secondary view-btn" onclick="toggleViewer('module2-viewer')">View PDF</button>
                 </div>
-                <iframe id="module2-viewer" class="pdf-viewer" src="./assests/module2.pdf"></iframe>
+                <iframe id="module2-viewer" class="pdf-viewer" src="../assests/FSD module2.pdf"></iframe>
             </div>
             <div class="module" id="module3">
                 <h4>Module 3</h4>
